back command 초안

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,5 @@ commands:
     description: show your home list
   delhome:
     description: remove your home
+  back:
+    description: back to previous position
